<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SinglePlayerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/wonDialog"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/dialog_background"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/dialog_background"
                android:contentDescription="@string/game_layout"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/main_background2" />

            <ImageView
                android:id="@+id/trophyView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/winner"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.125"
                app:srcCompat="@drawable/winner" />

            <TextView
                android:id="@+id/resultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/congratulations"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/trophyView"
                app:layout_constraintStart_toStartOf="@+id/trophyView"
                app:layout_constraintTop_toBottomOf="@+id/trophyView"
                app:layout_constraintVertical_bias="0.115" />

            <TextView
                android:id="@+id/namePlate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/circle_player_won"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/trophyView"
                app:layout_constraintStart_toStartOf="@+id/trophyView"
                app:layout_constraintTop_toBottomOf="@+id/trophyView"
                app:layout_constraintVertical_bias="0.416" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/playAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="15dp"
                android:text="@string/play_again"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/trophyView"
                app:layout_constraintStart_toStartOf="@+id/trophyView"
                app:layout_constraintTop_toBottomOf="@+id/trophyView"
                app:layout_constraintVertical_bias="0.869" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/turnLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/gameBoard"
            app:layout_constraintEnd_toEndOf="@+id/gameBoard"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gameBoard"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/turn"

                android:textColor="#000000"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/turnView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/shows_turn_of_the_player"
                android:src="@drawable/player_1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gameBoard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/tic1"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/tic1View"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/box"
                        android:src="@drawable/player_1"
                        tools:ignore="NestedWeights" />
                </LinearLayout>

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:background="@color/black" />

                <LinearLayout
                    android:id="@+id/tic2"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/tic2View"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/box"
                        android:src="@drawable/player_1"
                        tools:ignore="NestedWeights" />
                </LinearLayout>


                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:background="@color/black" />

                <LinearLayout
                    android:id="@+id/tic3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/tic3View"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/box"
                        android:src="@drawable/player_1"
                        tools:ignore="NestedWeights" />
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/tic4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/tic4View"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/box"
                        android:src="@drawable/player_1"
                        tools:ignore="NestedWeights" />
                </LinearLayout>


                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:background="@color/black" />

                <LinearLayout
                    android:id="@+id/tic5"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/tic5View"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/box"
                        android:src="@drawable/player_1"
                        tools:ignore="NestedWeights" />

                </LinearLayout>


                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:background="@color/black" />

                <LinearLayout
                    android:id="@+id/tic6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/tic6View"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/box"
                        android:src="@drawable/player_1"
                        tools:ignore="NestedWeights" />

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/tic7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/tic7View"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/box"
                        android:src="@drawable/player_1"
                        tools:ignore="NestedWeights" />
                </LinearLayout>


                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:background="@color/black" />

                <LinearLayout
                    android:id="@+id/tic8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/tic8View"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/box"
                        android:src="@drawable/player_1"
                        tools:ignore="NestedWeights" />
                </LinearLayout>


                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:background="@color/black" />

                <LinearLayout
                    android:id="@+id/tic9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/tic9View"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/box"
                        android:src="@drawable/player_1"
                        tools:ignore="NestedWeights" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/restartGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/gameBoard"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gameBoard"
            app:layout_constraintTop_toBottomOf="@+id/gameBoard"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/restart"
                android:src="@drawable/restart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/restart"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <Switch
            android:id="@+id/soundsSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="Sounds"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/restartGame"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/restartGame"
            app:layout_constraintTop_toBottomOf="@+id/restartGame"
            app:layout_constraintVertical_bias="0.7" />

        <TextView
            android:id="@+id/waitView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dots"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/restartGame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wonDialog"
            app:layout_constraintVertical_bias="0.90999997" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>